# FileChecker

./: FileChecker.py  MANIFEST.in  README.md  installer.py  requirements.txt  setup.cfg  setup.py
FileChecker/: FileChecker.py
