[metadata]
name = FileChecker
version = 1.0.0
author = minomushi
description = "ファイルの変更を検知するソフト"
long_description = file: README.md
license = MIT

[options]
install_requires =
    Pillow
    pystray
    watchdog
packages = find:

[options.entry_points]
gui_scripts =
    FileChecker = FileChecker.FileChecker:main

[options.package_data]
FileChecker = FileCheckerIcon.ico